framework-pkg/main/logging-utilities-core/default/objects/Log_Line__c/Log_Line__c.object-meta.xml
<CustomObject>
    <description>Contains the details about an error occurence</description>
    <label>Log line</label>
    <nameField>
        <displayFormat>LOGL-{0000000000}</displayFormat>
        <label>Log Line Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>