framework-pkg/main/logging-utilities-core/default/objects/Log_Line__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>TimeStamp of the error occurence</description>
    <label>Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>