framework-pkg/main/logging-utilities-core/default/objects/Log_Line__c/fields/Error_Stacktrace__c.field-meta.xml
<CustomField>
    <fullName>Error_Stacktrace__c</fullName>
    <description>Stacktrace of the Exception, if available</description>
    <label>Error Stacktrace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>