framework-pkg/main/logging-utilities-core/default/objects/Log_Line__c/fields/Log__c.field-meta.xml
<CustomField>
    <fullName>Log__c</fullName>
    <description>The Log record this error is related to</description>
    <label>Log</label>
    <referenceTo>Log__c</referenceTo>
    <relationshipLabel>Log lines</relationshipLabel>
    <relationshipName>Log_lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>