framework-pkg/main/logging-utilities-core/default/objects/Log_Line__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Type of SObject on which the error has occured</description>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>