framework-pkg/main/logging-utilities-core/default/objects/Log_Line__c/fields/Record_id__c.field-meta.xml
<CustomField>
    <fullName>Record_id__c</fullName>
    <description>The Id of the SObject on which the error occured, if available</description>
    <label>Record id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>