framework-pkg/main/logging-utilities-core/default/objects/Log_Line__c/fields/Record_ids__c.field-meta.xml
<CustomField>
    <fullName>Record_ids__c</fullName>
    <description>Store multiple id</description>
    <label>Record ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>